--- a/ExcaliburOld_font.css
+++ b/ExcaliburOld_font.css
@@ -3,4 +3,5 @@
     src: url('https://static1.squarespace.com/static/5d090703bfcf6300017faaa8/t/6722ad2a8c330668e16c10e0/1730325823340/Excalibur+Old.ttf');
     font-weight: normal;
     font-style: normal;
+    letter-spacing: 0.1em;
 }
